Bug 403142 - Newlines are removed from extracted comments
Summary: Newlines are removed from extracted comments
Status: RESOLVED FIXED
Alias: None
Product: lokalize
Classification: Applications
Component: editor (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Simon Depiets
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-01-12 14:08 UTC by Karl Ove Hufthammer
Modified: 2019-03-18 10:54 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Example PO file showing the problem (536 bytes, text/x-gettext-translation)
2019-01-12 14:08 UTC, Karl Ove Hufthammer
Details
Screenshot showing the problem (29.50 KB, image/png)
2019-01-12 14:08 UTC, Karl Ove Hufthammer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Karl Ove Hufthammer 2019-01-12 14:08:30 UTC
Created attachment 117419 [details]
Example PO file showing the problem

SUMMARY
Multi-line *extracted* comments are merged into a single line when displayed in Lokalize. (The same thing does not happend for translator comments).


STEPS TO REPRODUCE
1. Open the attached PO file.
2. Look in the ‘Unit metadata’ pane.

OBSERVED RESULT
The three extracted comments are shown as *one* long string.

EXPECTED RESULT
The extracted comments should be shown as three separate lines (just like the translator comments are).

ADDITIONAL INFORMATION
I’ll attach a screenshot showing the problem.
Comment 1 Karl Ove Hufthammer 2019-01-12 14:08:53 UTC
Created attachment 117420 [details]
Screenshot showing the problem
Comment 2 Simon Depiets 2019-03-18 10:53:45 UTC
Git commit fb9e402332a69613f58b8336b30ffca678a62083 by Simon Depiets.
Committed on 18/03/2019 at 10:53.
Pushed by sdepiets into branch 'master'.

Fix a bug where newlines were removed from extracted comments

M  +1    -1    src/msgctxtview.cpp

https://commits.kde.org/lokalize/fb9e402332a69613f58b8336b30ffca678a62083
Comment 3 Simon Depiets 2019-03-18 10:54:28 UTC
Git commit 638acfb39fa8a251fcbe0290bf610a2e1a9b8fa4 by Simon Depiets.
Committed on 18/03/2019 at 10:54.
Pushed by sdepiets into branch 'Applications/19.04'.

Fix a bug where newlines were removed from extracted comments

M  +1    -1    src/msgctxtview.cpp

https://commits.kde.org/lokalize/638acfb39fa8a251fcbe0290bf610a2e1a9b8fa4