Fix a bug where newlines were removed from extracted comments

BUG: 403142